--- a/cat-clicker.html
+++ b/cat-clicker.html
@@ -3,8 +3,13 @@
         <title>Cat Clicker App</title>
     </head>
     <body>
-        <div id="cat-image">
-            <img src="https://lh3.ggpht.com/nlI91wYNCrjjNy5f-S3CmVehIBM4cprx-JFWOztLk7vFlhYuFR6YnxcT446AvxYg4Ab7M1Fy0twaOCWYcUk=s0#w=640&h=426" />
+        <div id="cat1">
+            <img id="cat1-image" src="https://lh3.ggpht.com/nlI91wYNCrjjNy5f-S3CmVehIBM4cprx-JFWOztLk7vFlhYuFR6YnxcT446AvxYg4Ab7M1Fy0twaOCWYcUk=s0#w=640&h=426" />
+            <p id="cat1-name"></p>
+        </div>
+        <div id="cat2">
+            <img id="cat2-image" src="https://lh3.ggpht.com/kixazxoJ2ufl3ACj2I85Xsy-Rfog97BM75ZiLaX02KgeYramAEqlEHqPC3rKqdQj4C1VFnXXryadFs1J9A=s0#w=640&h=496" />
+            <p id="cat2-name"></p>
         </div>
         <div id="click-counter">
             0
